WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
184725
REGRESSION(
r230748
) [WinCairo] 'JSC::JIT::appendCallWithSlowPathReturnType': function does not take 1 arguments
https://bugs.webkit.org/show_bug.cgi?id=184725
Summary
REGRESSION(r230748) [WinCairo] 'JSC::JIT::appendCallWithSlowPathReturnType': ...
Fujii Hironori
Reported
2018-04-18 02:23:33 PDT
REGRESSION(
r230748
) 'JSC::JIT::appendCallWithSlowPathReturnType': function does not take 1 arguments Windows x64 builds are failing.
https://build.webkit.org/builders/WinCairo%2064-Bit%20Release/builds/12475
> [115/270] Building CXX object Source\JavaScriptCore\CMakeFiles\JavaScriptCore.dir\__\__\DerivedSources\JavaScriptCore\unified-sources\UnifiedSource80.cpp.obj > FAILED: Source/JavaScriptCore/CMakeFiles/JavaScriptCore.dir/__/__/DerivedSources/JavaScriptCore/unified-sources/UnifiedSource80.cpp.obj > "C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\VC\Tools\MSVC\14.12.25827\bin\Hostx64\x64\cl.exe" /nologo /TP -DBUILDING_JavaScriptCore -DBUILDING_WITH_CMAKE=1 -DHAVE_CONFIG_H=1 -DJavaScriptCore_EXPORTS -DNOMINMAX -DUCHAR_TYPE=wchar_t -DUNICODE -DWINVER=0x601 -DWTF_PLATFORM_WIN_CAIRO=1 -D_CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES=1 -D_CRT_SECURE_NO_WARNINGS -D_HAS_EXCEPTIONS=0 -D_UNICODE -D_WIN32_WINNT=0x601 -D_WINDOWS -D_WINSOCKAPI_="" -I..\..\WebKitLibraries\win\include -IDerivedSources\ForwardingHeaders -I. -I..\..\Source\JavaScriptCore -I..\..\Source\JavaScriptCore\API -I..\..\Source\JavaScriptCore\assembler -I..\..\Source\JavaScriptCore\b3 -I..\..\Source\JavaScriptCore\b3\air -I..\..\Source\JavaScriptCore\bindings -I..\..\Source\JavaScriptCore\builtins -I..\..\Source\JavaScriptCore\bytecode -I..\..\Source\JavaScriptCore\bytecompiler -I..\..\Source\JavaScriptCore\dfg -I..\..\Source\JavaScriptCore\disassembler -I..\..\Source\JavaScriptCore\disassembler\ARM64 -I..\..\Source\JavaScriptCore\disassembler\ARMv7 -I..\..\Source\JavaScriptCore\disassembler\udis86 -I..\..\Source\JavaScriptCore\domjit -I..\..\Source\JavaScriptCore\ftl -I..\..\Source\JavaScriptCore\heap -I..\..\Source\JavaScriptCore\debugger -I..\..\Source\JavaScriptCore\inspector -I..\..\Source\JavaScriptCore\inspector\agents -I..\..\Source\JavaScriptCore\inspector\augmentable -I..\..\Source\JavaScriptCore\inspector\remote -I..\..\Source\JavaScriptCore\interpreter -I..\..\Source\JavaScriptCore\jit -I..\..\Source\JavaScriptCore\llint -I..\..\Source\JavaScriptCore\parser -I..\..\Source\JavaScriptCore\profiler -I..\..\Source\JavaScriptCore\runtime -I..\..\Source\JavaScriptCore\tools -I..\..\Source\JavaScriptCore\wasm -I..\..\Source\JavaScriptCore\wasm\js -I..\..\Source\JavaScriptCore\yarr -IDerivedSources\JavaScriptCore -IDerivedSources\JavaScriptCore\inspector -IDerivedSources\JavaScriptCore\runtime -IDerivedSources\JavaScriptCore\yarr -I..\include\private -I..\..\Source\bmalloc -IDerivedSources -I..\..\Source\ThirdParty /DWIN32 /D_WINDOWS /W4 /GR- /EHs- /EHc- /MD /O2 /Ob2 /DNDEBUG /wd4018 /wd4068 /wd4099 /wd4100 /wd4127 /wd4138 /wd4146 /wd4180 /wd4189 /wd4201 /wd4206 /wd4244 /wd4251 /wd4267 /wd4275 /wd4288 /wd4291 /wd4305 /wd4309 /wd4344 /wd4355 /wd4389 /wd4396 /wd4456 /wd4457 /wd4458 /wd4459 /wd4481 /wd4503 /wd4505 /wd4510 /wd4512 /wd4530 /wd4610 /wd4611 /wd4646 /wd4702 /wd4706 /wd4722 /wd4800 /wd4819 /wd4951 /wd4952 /wd4996 /wd6011 /wd6031 /wd6211 /wd6246 /wd6255 /wd6387 /Zi /GS /EHa- /EHc- /EHs- /fp:except- /analyze- /bigobj /Gy- /openmp- /GF- /utf-8 /validate-charset /Oy- /showIncludes /FoSource\JavaScriptCore\CMakeFiles\JavaScriptCore.dir\__\__\DerivedSources\JavaScriptCore\unified-sources\UnifiedSource80.cpp.obj /FdSource\JavaScriptCore\CMakeFiles\JavaScriptCore.dir\ /FS -c DerivedSources\JavaScriptCore\unified-sources\UnifiedSource80.cpp > c:\webkit-buildslave\win-cairo-release\build\source\javascriptcore\jit\JITInlines.h(164): error C2660: 'JSC::JIT::appendCallWithSlowPathReturnType': function does not take 1 arguments
Attachments
WIP patch
(781 bytes, patch)
2018-04-18 03:34 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Patch
(2.08 KB, patch)
2018-04-18 11:39 PDT
,
Ross Kirsling
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2018-04-18 03:34:53 PDT
Created
attachment 338207
[details]
WIP patch This patch doesn't solve all problems.
>------ Build started: Project: JavaScriptCore (JavaScriptCore\JavaScriptCore), Configuration: Debug x64 ------ >UnifiedSource80.cpp >c:\webkit\ga\source\javascriptcore\jit\ccallhelpers.h(699): error C2338: Basic sanity check >c:\webkit\ga\source\javascriptcore\jit\jit.h(731): note: see reference to function template instantiation 'void JSC::CCallHelpers::setupArguments<OperationType,>(void)' being compiled > with > [ > OperationType=JSC::SlowPathReturnType (__cdecl *)(JSC::ExecState *,uint32_t) > ] >c:\webkit\ga\source\javascriptcore\jit\jit.cpp(112): note: see reference to function template instantiation 'JSC::AbstractMacroAssembler<JSC::Assembler>::Call JSC::JIT::callOperation<JSC::SlowPathReturnType(__cdecl *)(JSC::ExecState *,uint32_t),>(OperationType,int)' being compiled > with > [ > OperationType=JSC::SlowPathReturnType (__cdecl *)(JSC::ExecState *,uint32_t) > ] >c:\webkit\ga\source\javascriptcore\bytecode\codeblock.h(964): note: see reference to class template instantiation 'WTF::Poisoned<JSC::CodeBlockPoison,JSC::VM *,void>' being compiled
Mark Lam
Comment 2
2018-04-18 07:40:49 PDT
Comment on
attachment 338207
[details]
WIP patch Patch looks good but needs a ChangeLog. You can use Tools/Scripts/prepare-ChangeLog to create that, and then fill in the details.
Ross Kirsling
Comment 3
2018-04-18 11:39:18 PDT
Created
attachment 338232
[details]
Patch
Mark Lam
Comment 4
2018-04-18 11:44:30 PDT
Comment on
attachment 338232
[details]
Patch r=me
Ross Kirsling
Comment 5
2018-04-18 11:50:01 PDT
(In reply to Mark Lam from
comment #4
)
> Comment on
attachment 338232
[details]
> Patch > > r=me
Thanks. I just wanted to note that the failure to build was reported correctly by WinCairo EWS in the original ticket, though this may have been obscured by the fact that the first patch hit an intermittent failure to apply. I definitely want to make stabilizing WinCairo EWS a priority over here (as it is certainly frustrating for everyone involved), but please note in the meantime that successive red bubbles should indicate legitimate breakage.
WebKit Commit Bot
Comment 6
2018-04-18 13:20:02 PDT
Comment on
attachment 338232
[details]
Patch Clearing flags on attachment: 338232 Committed
r230776
: <
https://trac.webkit.org/changeset/230776
>
WebKit Commit Bot
Comment 7
2018-04-18 13:20:03 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8
2018-04-18 13:21:22 PDT
<
rdar://problem/39538070
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug