REGRESSION(r230748) [WinCairo] 'JSC::JIT::appendCallWithSlowPathReturnType': function does not take 1 arguments https://bugs.webkit.org/show_bug.cgi?id=184725

Reviewed by Mark Lam.

* jit/JIT.h:


Canonical link: https://commits.webkit.org/200259@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230776 268f45cc-cd09-0410-ab3c-d52691b4dbfc